# Timeshift

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  Makefile  README.md  debug-mandatory-ot.md  docker-compose.yml  qa-audit-results.md  qa-test-plan.md  qa-test-results.md  se-coverage-extraction-results.md  se-data-extraction.md  se-exploration-prompt.md
backend/: Cargo.toml
backend/.sqlx/: query-0048b7a5b92dc30905d15c5a50621d3823976c3f6e91f3123fffc89094ff5ab3.json  query-00a6aec1abcc62a75c9615163fb7e0449a7fc68080ab811c5035b3410f1a3ef4.json  query-01a8c3703600b5884b371e7fe7f478978c133b1481034c68b0ca956d49b8e2be.json  query-01f32f7ab003756dacd2490581e1ff59b3a2393bc584aa5f18bb8b5f710220e3.json  query-020ff27d7f495dc31522b61a860234e589f4590d3bf60ee0d1362b2f8bdadab0.json  query-0237c1e89f052fd665f03da3d82bca9551a7bfab72871c15c0a08c1cb4595319.json  query-02d2e47859430246341357d22f50210fa7b097789a4cd8069f6b0f8c7a0184b4.json  query-02d419a4260b553317c06f84595fdf333e5fc3fda471733ca3eec12cfd953e78.json  query-03a132fb58d9d6333ec0720164d3b3d80c45c4220dc9c25982761c16a70b1822.json  query-03b2a1a804cfbfde0da58e4a544583398e537d0b5bebbeaac13c2c70f08b00a4.json  query-0493ec86ec6fdc7f76b5e0d9159b019129289b96ea8ef600997fb6f913794484.json  query-05d416c3d7886c3ed4b4306c7b62d0b8f1320dc0dd60a6adca46630368b4649e.json  query-05e34d2927eae54e6251133c38638ba44a4ab754e56a7bce4f6bfbe49a7c0cb8.json  query-05ea1efd0a0df7c6ee83173f86fa2900da9543c4b041adf3c320ba745d2ba9bb.json  query-06567f1689040061aafab04ab81dce1c3614695991d209552cea69019a85a369.json  (+659 more)
backend/migrations/: 0001_initial.sql  (+57 more)
(+564 files in other folders)
