[package]
name = "timeshift-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

# Config / env
dotenvy = "0.15"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support (required for axum extractors)
async-trait = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }
